[WIP] Fixed size for alignment svg icons

--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -473,6 +473,10 @@
 			box-shadow: inset 0 -1px 0 #00435d;
 		}
 	}
+	.components-button svg[size="24"] {
+		width: 24px;
+		height: 24px;
+	}
 }
 
 .wpzoom-recipe-card-settings {
